# SpaceInvaders2.0

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md
Debug/: .gitignore  SpaceInvaders2.0  makefile  objects.mk  sources.mk
Debug/src/: Basher.d  Blaster.d  Bomber.d  Game.d  Healthbar.d  Level.d  PlayerShip.d  SDLAudioEngine.d  SDLBackground.d  SDLBasher.d  SDLBlaster.d  SDLBomber.d  SDLBoss.d  SDLButton.d  SDLContext.d  SDLFactory.d  SDLGameOverScreen.d  SDLHealthbar.d  SDLInput.d  SDLLaser.d  SDLLaserBomb.d  SDLMenu.d  SDLPlayerShip.d  SDLText.d  Screen.d  main.d  subdir.mk
Game_Core/include/: AbstractFactory.h  AudioEngine.h  Background.h  BaseInput.h  Basher.h  Blaster.h  Bomber.h  Boss.h  BoundingBox.h  Entity.h  FileWriter.h  Game.h  Healthbar.h  Input.h  Laser.h  LaserBomb.h  Level.h  LifePowerUp.h  PlayerShip.h  PowerUp.h  Screen.h  Text.h  Timer.h  Window.h
Game_Core/src/: Background.cpp  BaseInput.cpp  Basher.cpp  Blaster.cpp  Bomber.cpp  Boss.cpp  BoundingBox.cpp  Entity.cpp  FileWriter.cpp  Game.cpp  Healthbar.cpp  Laser.cpp  LaserBomb.cpp  Level.cpp  LifePowerUp.cpp  PlayerShip.cpp  Screen.cpp  Text.cpp  Timer.cpp  Window.cpp  main.cpp
Game_SDL/include/: SDLAudioEngine.h  SDLBackground.h  SDLBasher.h  SDLBlaster.h  SDLBomber.h  SDLBoss.h  SDLButton.h  SDLContext.h  SDLFactory.h  SDLGameOverScreen.h  SDLHealthbar.h  SDLInput.h  SDLLaser.h  SDLLaserBomb.h  SDLLifePowerUp.h  SDLMenu.h  SDLNextLevelScreen.h  SDLPlayerShip.h  SDLSettingsScreen.h  SDLText.h  SDLTextBox.h  SDLTimer.h  SDLWindow.h
Game_SDL/src/: SDLAudioEngine.cpp  SDLBackground.cpp  SDLBasher.cpp  SDLBlaster.cpp  SDLBomber.cpp  SDLBoss.cpp  SDLButton.cpp  SDLContext.cpp  SDLFactory.cpp  SDLGameOverScreen.cpp  SDLHealthbar.cpp  SDLInput.cpp  SDLLaser.cpp  SDLLaserBomb.cpp  SDLLifePowerUp.cpp  SDLMenu.cpp  SDLNextLevelScreen.cpp  SDLPlayerShip.cpp  SDLSettingsScreen.cpp  SDLText.cpp  SDLTextBox.cpp  SDLTimer.cpp  SDLWindow.cpp
Windows/: LICENSE.TXT  SDL2LICENSE.TXT
graphics/: bitfix.ttf.bf
include/: AbstractFactory.h  AudioEngine.h  Background.h  Basher.h  Blaster.h  Bomber.h  Boss.h  BoundingBox.h  Entity.h  Game.h  Healthbar.h  Hivemind.h  Input.h  Laser.h  LaserBomb.h  Level.h  LevelGenerator.h  Menu.h  Overlay.h  PlayerReqIntf.h  PlayerShip.h  Projectile.h  QuadTree.h  SDLAudioEngine.h  SDLBackground.h  SDLBasher.h  SDLBlaster.h  SDLBomber.h  SDLBoss.h  SDLButton.h  SDLContext.h  SDLFactory.h  SDLGameOverScreen.h  SDLHealthbar.h  SDLInput.h  SDLLaser.h  SDLLaserBomb.h  SDLMenu.h  SDLOverlay.h  SDLPlayerShip.h  (+7 more)
src/: AudioEngine.cpp  Background.cpp  Basher.cpp  Blaster.cpp  Bomber.cpp  Boss.cpp  BoundingBox.cpp  Entity.cpp  Game.cpp  Healthbar.cpp  Hivemind.cpp  Laser.cpp  LaserBomb.cpp  Level.cpp  LevelGenerator.cpp  Menu.cpp  Overlay.cpp  PlayerShip.cpp  Projectile.cpp  QuadTree.cpp  SDLAudioEngine.cpp  SDLBackground.cpp  SDLBasher.cpp  SDLBlaster.cpp  SDLBomber.cpp  SDLBoss.cpp  SDLButton.cpp  SDLContext.cpp  SDLFactory.cpp  SDLGameOverScreen.cpp  SDLHealthbar.cpp  SDLInput.cpp  SDLLaser.cpp  SDLLaserBomb.cpp  SDLMenu.cpp  SDLOverlay.cpp  SDLPlayerShip.cpp  SDLText.cpp  SDLTimer.cpp  SDLWindow.cpp  (+5 more)
