# cmake_minimum_required(VERSION <specify CMake version here>)
project(SpaceInvaders2_0)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        Game_Core/include/AbstractFactory.h
        Game_Core/include/AudioEngine.h
        Game_Core/include/Background.h
        Game_Core/include/Basher.h
        Game_Core/include/Blaster.h
        Game_Core/include/Bomber.h
        Game_Core/include/BoundingBox.h
        Game_Core/include/Entity.h
        Game_Core/include/FileWriter.h
        Game_Core/include/Game.h
        Game_Core/include/Healthbar.h
        Game_Core/include/Input.h
        Game_Core/include/Laser.h
        Game_Core/include/LaserBomb.h
        Game_Core/include/Level.h
        Game_Core/include/PlayerShip.h
        Game_Core/include/Screen.h
        Game_Core/include/Text.h
        Game_Core/include/Timer.h
        Game_Core/include/Window.h
        Game_Core/src/Background.cpp
        Game_Core/src/Basher.cpp
        Game_Core/src/Blaster.cpp
        Game_Core/src/Bomber.cpp
        Game_Core/src/BoundingBox.cpp
        Game_Core/src/Entity.cpp
        Game_Core/src/FileWriter.cpp
        Game_Core/src/Game.cpp
        Game_Core/src/Healthbar.cpp
        Game_Core/src/Laser.cpp
        Game_Core/src/LaserBomb.cpp
        Game_Core/src/Level.cpp
        Game_Core/src/main.cpp
        Game_Core/src/PlayerShip.cpp
        Game_Core/src/Screen.cpp
        Game_Core/src/Text.cpp
        Game_Core/src/Timer.cpp
        Game_Core/src/Window.cpp
        Game_SDL/include/SDLAudioEngine.h
        Game_SDL/include/SDLBackground.h
        Game_SDL/include/SDLBasher.h
        Game_SDL/include/SDLBlaster.h
        Game_SDL/include/SDLBomber.h
        Game_SDL/include/SDLButton.h
        Game_SDL/include/SDLContext.h
        Game_SDL/include/SDLFactory.h
        Game_SDL/include/SDLGameOverScreen.h
        Game_SDL/include/SDLHealthbar.h
        Game_SDL/include/SDLInput.h
        Game_SDL/include/SDLLaser.h
        Game_SDL/include/SDLLaserBomb.h
        Game_SDL/include/SDLMenu.h
        Game_SDL/include/SDLNextLevelScreen.h
        Game_SDL/include/SDLPlayerShip.h
        Game_SDL/include/SDLSettingsScreen.h
        Game_SDL/include/SDLText.h
        Game_SDL/include/SDLTextBox.h
        Game_SDL/include/SDLTimer.h
        Game_SDL/include/SDLWindow.h
        Game_SDL/src/SDLAudioEngine.cpp
        Game_SDL/src/SDLBackground.cpp
        Game_SDL/src/SDLBasher.cpp
        Game_SDL/src/SDLBlaster.cpp
        Game_SDL/src/SDLBomber.cpp
        Game_SDL/src/SDLButton.cpp
        Game_SDL/src/SDLContext.cpp
        Game_SDL/src/SDLFactory.cpp
        Game_SDL/src/SDLGameOverScreen.cpp
        Game_SDL/src/SDLHealthbar.cpp
        Game_SDL/src/SDLInput.cpp
        Game_SDL/src/SDLLaser.cpp
        Game_SDL/src/SDLLaserBomb.cpp
        Game_SDL/src/SDLMenu.cpp
        Game_SDL/src/SDLNextLevelScreen.cpp
        Game_SDL/src/SDLPlayerShip.cpp
        Game_SDL/src/SDLSettingsScreen.cpp
        Game_SDL/src/SDLText.cpp
        Game_SDL/src/SDLTextBox.cpp
        Game_SDL/src/SDLTimer.cpp
        Game_SDL/src/SDLWindow.cpp)

add_executable(SpaceInvaders2_0 ${SOURCE_FILES})